syntax = "proto3";

package api;

option go_package = "gen/pb";

import public "github.com/grpc-ecosystem/grpc-gateway/third_party/googleapis/google/api/annotations.proto";
import public "github.com/grpc-ecosystem/grpc-gateway/protoc-gen-openapiv2/options/annotations.proto";
import public "github.com/TheSDTM/protoc-gen-gorm/options/gorm.proto";
import public "github.com/envoyproxy/protoc-gen-validate/validate/validate.proto";
import public "google/protobuf/any.proto";

import public "enums.proto";

message SportsObject {
    option (gorm.opts).ormable = true;
    uint32 object_id = 1;
    string object_name = 2;
    uint32 departmental_organization_id = 3;
    string departmental_organization_name = 4;
    uint32 sports_area_id = 5;
    string sports_area_name = 6;
    string sports_area_type = 7;
    uint32 availability = 8;
    string sport_kind = 9;
}